--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "liarsdice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "giacomozama.github.io/liarsdice",
+  "homepage": "https://giacomozama.github.io/liarsdice",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
